# Frontier-based-Exploration_-image-detection-

./: README.md
exploration/: CMakeLists.txt  setup.py
exploration/launch/: example.launch
exploration/msg/: Path.msg
exploration/scripts/: explorer.py  frontier.py  path_follower.py  planner.py
exploration/src/exploration/: __init__.py  utils.py
exploration/srv/: GenerateFrontier.srv
src/aro_evaluathor/: CMakeLists.docx  package.xml  setup.py
src/aro_evaluathor/init_poses/: aro_maze_8.docx  stage_3.docx  stage_4.docx
src/aro_evaluathor/launch/: eval_world.launch
src/aro_evaluathor/maps/: aro_maze_8.docx  autorace.docx  brick_maze_1.docx  house.docx  stage_1.docx  stage_2.docx  stage_3.docx  stage_4.docx
src/aro_evaluathor/scripts/: run_eval_student.py
src/aro_evaluathor/src/aro_evaluathor/: utils.py
src/aro_sim/: CMakeLists.docx  package.xml
src/aro_sim/config/: f710.config.yaml  onlysim.rviz  turtlebot3.rviz
src/aro_sim/launch/: onlysim.launch  teleop_joy.launch  teleop_keyboard.launch  turtlebot3.launch
src/aro_sim/media/materials/scripts/: barbie.material
src/aro_sim/models/barbiebox/: model.config  model.sdf
src/aro_sim/urdf/: barbie.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_rgbd.gazebo.xacro  turtlebot3_burger_rgbd.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
src/aro_sim/worlds/: aro_maze_8.world  brick_maze_1.world
src/aro_slam/: CMakeLists.docx  dependencies.rosinstall  package.xml  setup.py
src/aro_slam/launch/: bag.launch  icp_slam_2d.launch  live.launch  model.launch  rviz.launch  sim.launch  turtle.rviz
src/aro_slam/scripts/: icp_slam_2d
src/aro_slam/src/aro_slam/: __init__.py  icp.py  occupancy.py  utils.py
src/barbie_detection/: CMakeLists.docx  package.xml  setup.py
src/barbie_detection/launch/: detector_bagfile.launch
src/barbie_detection/rviz/: turtlebot3.rviz
src/barbie_detection/scripts/: detector.py  network.py  utils.py
src/exploration/: CMakeLists.docx  package.xml
src/exploration/launch/: exploration.launch
src/exploration/msg/: sendOccupancy.msg  status.msg
src/exploration/scripts/: explorer.py  frontier.py  path_follower.py  planner.py
src/exploration/srv/: PlanPath.srv
